@@ -6,6 +6,7 @@ scene.textures.cat_png.file = scenes/cat/EgyptCat.png
 scene.textures.cat_png.gain = 1.0
 scene.textures.cat_png.storage = byte
 #scene.textures.cat_png.channel = mean
+#scene.textures.cat_png.channel = directx2opengl_normalmap
 scene.textures.cat_png.mapping.uvscale = 1.0 1.0
 scene.textures.cat_png.mapping.uvdelta = 0.0 0.0
 #scene.textures.cat_png.type = constfloat3
